--- a/docs/modules/stackablectl/pages/demos/data-lakehouse-iceberg-trino-spark.adoc
+++ b/docs/modules/stackablectl/pages/demos/data-lakehouse-iceberg-trino-spark.adoc
@@ -1,6 +1,12 @@
 = data-lakehouse-iceberg-trino-spark
 
 :demo-code: https://github.com/stackabletech/stackablectl/blob/main/demos/data-lakehouse-iceberg-trino-spark/create-spark-ingestion-job.yaml
+:iceberg-table-maintenance: https://iceberg.apache.org/docs/latest/spark-procedures/#metadata-management
+:spark-streaming-docs: https://spark.apache.org/docs/latest/structured-streaming-kafka-integration.html
+:iceberg-rewrite: https://iceberg.apache.org/docs/latest/spark-procedures/#rewrite_data_files
+:iceberg-merge-docs: https://iceberg.apache.org/docs/latest/spark-writes/#merge-into
+:k8s-cronjobs: https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/
+:airflow: https://airflow.apache.org/
 
 [IMPORTANT]
 ====
@@ -306,20 +312,19 @@ to strings and the json needs to be parsed.
 .withColumn("json", from_json(col("value"), schema)) \
 ----
 
-Afterwards we only select the needed fields (coming from JSON). We are not interested in all the other fields such as
-`key`, `value`, `topic` or `offset`. If you are interested in the metadata of the Kafka records, such as topic,
-timestamp, partition and offset they are available as well. Please have a look at the
-https://spark.apache.org/docs/latest/structured-streaming-kafka-integration.html[Spark streaming documentation on Kafka].
+Afterwards, we only select the needed fields (coming from JSON). We are not interested in all the other fields, such as
+`key`, `value`, `topic` or `offset`. The metadata of the Kafka records, such as `topic`, `timestamp`, `partition` and
+`offset`, are also available. Please have a look at the {spark-streaming-docs}[Spark streaming documentation on Kafka].
 
 [source,python]
 ----
 .select("json.station_uuid", "json.timestamp", "json.value") \
 ----
 
-After all this transformations we need to specify the sink of the stream, in this case the Iceberg lakehouse. We are
+After all these transformations, we need to specify the sink of the stream, in this case, the Iceberg lakehouse. We are
 writing in the `iceberg` format using the `update` mode rather than the "normal" `append` mode. Spark will aim for a
-microbatch every `2 minutes` and will save it's checkpoints (it's current offsets on the Kafka topic) in the specified
-S3 location. Afterwards the streaming job will be started by calling `.start()`
+micro-batch every 2 minutes and save its checkpoints (its current offsets on the Kafka topic) in the specified S3
+location. Afterwards, the streaming job will be started by calling `.start()`.
 
 [source,python]
 ----
@@ -333,7 +338,7 @@ S3 location. Afterwards the streaming job will be started by calling `.start()`
 .start()
 ----
 
-=== Deduplication mechanism
+=== Deduplication Mechanism
 
 One important part was skipped during the walkthrough:
 
@@ -342,10 +347,10 @@ One important part was skipped during the walkthrough:
 .foreachBatch(upsertWaterLevelsMeasurements) \
 ----
 
-`upsertWaterLevelsMeasurements` is a Python function that describes how to insert the records coming from Kafka into the
-lakehouse table. This specific streaming job removes all duplicate records, that can occur because of how the
-PegelOnline API works and gets called. As we don't want duplicate rows in our lakehouse tables, we need to filter the
-duplicates out as follows.
+`upsertWaterLevelsMeasurements` is a Python function that describes inserting the records from Kafka into the lakehouse
+table. This specific streaming job removes all duplicate records that can occur because of how the PegelOnline API works
+and gets called. As we don't want duplicate rows in our lakehouse tables, we need to filter the duplicates out as
+follows.
 
 [source,python]
 ----
@@ -360,18 +365,17 @@ def upsertWaterLevelsMeasurements(microBatchOutputDF, batchId):
     """)
 ----
 
-First of the dataframe containing the upserts (records coming from Kafka) will be registered as a temporary view, so
-they can be access via Spark SQL. Afterwards the `MERGE INTO` statement is used to add the new records to the lakehouse
-table.
+First, the data frame containing the upserts (records from Kafka) will be registered as a temporary view so that they
+can be accessed via Spark SQL. Afterwards, the `MERGE INTO` statement adds the new records to the lakehouse table.
 
-The incoming records are first de-duplicated (using `SELECT DISTINCT * FROM waterLevelsMeasurementsUpserts`), so that
-the data from Kafka does not contain duplicates. Afterwards the - now duplication free - records get added to the
-`lakehouse.water_levels.measurements`, but **only** if they are not already present.
+The incoming records are first de-duplicated (using `SELECT DISTINCT * FROM waterLevelsMeasurementsUpserts`) so that the
+data from Kafka does not contain duplicates. Afterwards, the - now duplication-free - records get added to the
+`lakehouse.water_levels.measurements`, but *only* if they still need to be present.
 
-=== Upsert mechanism
+=== Upsert Mechanism
 
-The `MERGE INTO` statement can not only be used for de-duplicating data but also for updating existing rows in the
-lakehouse table. The `ingest water_level stations` streaming job uses the following `MERGE INTO` statement:
+The `MERGE INTO` statement can be used for de-duplicating data and updating existing rows in the lakehouse table. The
+`ingest water_level stations` streaming job uses the following `MERGE INTO` statement:
 
 [source,sql]
 ----
@@ -387,27 +391,26 @@ WHEN MATCHED THEN UPDATE SET *
 WHEN NOT MATCHED THEN INSERT *
 ----
 
-First of the data within a batch is de-deduplicated as well. The record containing station update with the highest Kafka
-timestamp is the freshest update and will be used during Upsert.
+First, the data within a batch is de-deduplicated as well. The record containing the station update with the highest
+Kafka timestamp is the newest and will be used during Upsert.
 
-In case a record for a station (detected by the same `station_uud`) already exists, it's contents will be updated. In
-case the station is not known yet, it will be simply inserted. The `MERGE INTO` also supports updating a subsets of
-fields and more complex calculation e.g. incrementing a counter. For details have a look at the
-https://iceberg.apache.org/docs/latest/spark-writes/#merge-into[Iceberg MERGE INTO documentation].
+If a record for a station (detected by the same `station_uuid`) already exists, its contents will be updated. If the
+station is yet to be discovered, it will be inserted. The `MERGE INTO` also supports updating subsets of fields and more
+complex calculations, e.g. incrementing a counter. For details, have a look at the
+{iceberg-merge-docs}[Iceberg MERGE INTO documentation].
 
-=== Delete mechanism
+=== Delete Mechanism
 
-The `MERGE INTO` statement also supports deleting rows from the lakehouse tables. For details have a look at the
-https://iceberg.apache.org/docs/latest/spark-writes/#merge-into[Iceberg MERGE INTO documentation].
+The `MERGE INTO` statement can be used to de-duplicate data and update existing lakehouse table rows. For details have a
+look at the {iceberg-merge-docs}[Iceberg MERGE INTO documentation].
 
-=== Table maintenance
+=== Table Maintenance
 
-As mentioned in the beginning, Iceberg supports out-of-the-box
-https://iceberg.apache.org/docs/latest/spark-procedures/#metadata-management[table maintenance] such as compaction.
+As mentioned, Iceberg supports out-of-the-box {iceberg-table-maintenance}[table maintenance] such as compaction.
 
-This demos executes some maintenance functions in a very basic Python loop with sleeps in between. For production the
-maintenance can be scheduled using Kubernetes https://kubernetes.io/docs/concepts/workloads/controllers/cron-jobs/[CronJobs]
-or using https://airflow.apache.org/[Apache Airflow], which is also supported by the Stackable Data Platform.
+This demo executes some maintenance functions in a rudimentary Python loop with timeouts in between. When running in
+production, the maintenance can be scheduled using Kubernetes {k8s-cronjobs}[CronJobs] or {airflow}[Apache Airflow],
+which the Stackable Data Platform also supports.
 
 [source,python]
 ----
@@ -438,30 +441,36 @@ while True:
     time.sleep(25 * 60) # Assuming compaction takes 5 min run every 30 minutes
 ----
 
-The scripts has a dictionary of all the tables to run maintenance on. The following procedures are run:
+The scripts have a dictionary of all the tables to run maintenance on. The following procedures are run:
 
 ==== https://iceberg.apache.org/docs/latest/spark-procedures/#expire_snapshots[expire_snapshots]
 
-> Each write/update/delete/upsert/compaction in Iceberg produces a new snapshot while keeping the old data and metadata around for snapshot isolation and time travel. The expire_snapshots procedure can be used to remove older snapshots and their files which are no longer needed.
+> Each write/update/delete/upsert/compaction in Iceberg produces a new snapshot while keeping the old data and metadata
+around for snapshot isolation and time travel. The expire_snapshots procedure can be used to remove older snapshots and
+their files which are no longer needed.
 
 ==== https://iceberg.apache.org/docs/latest/spark-procedures/#remove_orphan_files[remove_orphan_files]
 
-> Used to remove files which are not referenced in any metadata files of an Iceberg table and can thus be considered “orphaned”.
+> Used to remove files which are not referenced in any metadata files of an Iceberg table and can thus be considered
+"orphaned".
 
 ==== https://iceberg.apache.org/docs/latest/spark-procedures/#rewrite_data_files[rewrite_data_files]
 
-> Iceberg tracks each data file in a table. More data files leads to more metadata stored in manifest files, and small data files causes an unnecessary amount of metadata and less efficient queries from file open costs. Iceberg can compact data files in parallel using Spark with the rewriteDataFiles action. This will combine small files into larger files to reduce metadata overhead and runtime file open cost.
+> Iceberg tracks each data file in a table. More data files leads to more metadata stored in manifest files, and small
+data files causes an unnecessary amount of metadata and less efficient queries from file open costs. Iceberg can compact
+data files in parallel using Spark with the rewriteDataFiles action. This will combine small files into larger files to
+reduce metadata overhead and runtime file open cost.
 
 Some tables will also be sorted during rewrite, please have a look at the
-https://iceberg.apache.org/docs/latest/spark-procedures/#rewrite_data_files[documentation on rewrite_data_files].
+{iceberg-rewrite}[documentation on rewrite_data_files].
 
 == Trino
 
 Trino is used to enable SQL access to the data.
 
-=== View Web Interface
+=== Viewing the Web Interface
 
-Open up the the given `trino` endpoint `coordinator-https` from your `stackablectl stacklets list` command output
+Open up the the Trino endpoint `coordinator-https` from your `stackablectl stacklets list` command output
 (https://212.227.224.138:30876 in this case).
 
 image::demos/data-lakehouse-iceberg-trino-spark/trino_1.png[]
@@ -499,7 +508,7 @@ Log in with the username `admin` and password `adminadmin`.
 
 image::demos/data-lakehouse-iceberg-trino-spark/superset_2.png[]
 
-=== View dashboard
+=== Viewing the Dashboard
 
 The demo has created dashboards to visualize the different data sources. To the dashboards click on the tab `Dashboards`
 at the top.
@@ -521,11 +530,11 @@ image::demos/data-lakehouse-iceberg-trino-spark/superset_6.png[]
 
 There are multiple other dashboards you can explore on you own.
 
-=== View charts
+=== Viewing Charts
 
 The dashboards consists of multiple charts. To list the charts click on the tab `Charts` at the top.
 
-=== Execute arbitrary SQL statements
+=== Executing Arbitrary SQL Statements
 
 Within Superset you can not only create dashboards but also run arbitrary SQL statements. On the top click on the tab
 `SQL Lab` -> `SQL Editor`.
