--- a/docs/modules/stackablectl/pages/demos/hbase-hdfs-load-cycling-data.adoc
+++ b/docs/modules/stackablectl/pages/demos/hbase-hdfs-load-cycling-data.adoc
@@ -72,12 +72,7 @@ PRODUCT    NAME       NAMESPACE  ENDPOINTS                                      
  zookeeper  zookeeper  default    zk                            172.18.0.4:32469
 ----
 
-[NOTE]
-====
-When a product instance has not finished starting yet, the service will have no endpoint. Starting all the product
-instances might take a considerable amount of time depending on your internet connectivity. In case the product is not
-ready yet a warning might be shown.
-====
+include::partial$instance-hint.adoc[]
 
 == The first Job
 
